[package]
name = "xtask-watch"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/rustminded/xtask-wasm"
documentation = "https://docs.rs/xtask-wasm"
readme = "README.md"
categories = ["development-tools"]
keywords = ["wasm", "cli"]
include = ["src/**/*.rs", "README.md", "LICENSE.Apache-2.0", "LICENSE.MIT"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
