[package]
name = "xtask-watch"
version = "0.3.1"
edition = "2021"
rust-version = "1.78"
license = "MIT OR Apache-2.0"
description = "A customizable helper to watch for changes in your projects using xtask."
homepage = "https://github.com/rustminded/xtask-wasm"
documentation = "https://docs.rs/xtask-wasm"
readme = "README.md"
categories = ["development-tools"]
keywords = ["wasm", "cli"]
include = ["src/**/*.rs", "README.md", "LICENSE.Apache-2.0", "LICENSE.MIT"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
cargo_metadata = "0.19.1"
clap = { version = "4.5.28", features = ["derive"] }
lazy_static = "1.5.0"
log = "0.4.25"
notify = "8.0.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2.169"
